# SP2023

./: cecilia_dashboard.json
SP2023/: CMakeLists.txt  playground.cpp
SP2023/aud1/: zadaca1.cpp
SP2023/aud10/: zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp  zadaca9.cpp
SP2023/aud11/: README.md  zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp  zadaca7.cpp
SP2023/aud2/: zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp  zadaca9.cpp
SP2023/aud3/: zadaca1.cpp
SP2023/aud4/: zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp
SP2023/aud5/: zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp
SP2023/aud6/: zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp
SP2023/aud7/: zadaca1.cpp  zadaca10.cpp  zadaca11.cpp  zadaca12.cpp  zadaca13.cpp  zadaca14.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp  zadaca9.cpp
SP2023/aud8/: zadaca1.cpp
SP2023/aud9/: zadaca1.cpp  zadaca2.cpp  zadaca3.cpp  zadaca4.cpp  zadaca5.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp
SP2023EN/: CMakeLists.txt
SP2023EN/ex1/: task1.cpp
SP2023EN/ex10/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
SP2023EN/ex11/: README.md  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task9.cpp
SP2023EN/ex2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
SP2023EN/ex3/: task1.cpp
SP2023EN/ex4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
SP2023EN/ex5/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
SP2023EN/ex6/: readme.md  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
SP2023EN/ex7/: task1.cpp  task10.cpp  task11.cpp  task12.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
SP2023EN/ex8/: task1.cpp  task3.cpp
SP2023EN/ex9/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
