cmake_minimum_required(VERSION 3.24)
project(SP2023)

set(CMAKE_CXX_STANDARD 17)
#
#add_executable(SP2023 main.cpp)

add_executable(zadaca1 aud11/zadaca1.cpp)

add_executable(zadaca2 aud11/zadaca2.cpp)
add_executable(zadaca3 aud11/zadaca3.cpp)
add_executable(zadaca4 aud11/zadaca4.cpp)
add_executable(zadaca5 aud11/zadaca5.cpp)
add_executable(zadaca6 aud11/zadaca6.cpp)
add_executable(zadaca7 aud10/zadaca7.cpp)
add_executable(zadaca8 aud10/zadaca8.cpp)

add_executable(zadaca9 aud10/zadaca9.cpp)
add_executable(zadaca10 aud7/zadaca10.cpp)
add_executable(zadaca11 aud7/zadaca11.cpp)
add_executable(zadaca12 aud7/zadaca12.cpp)
add_executable(zadaca13 aud7/zadaca13.cpp)
add_executable(zadaca14 aud7/zadaca14.cpp)


add_executable(playground playground.cpp)