cmake_minimum_required(VERSION 3.24)
project(SP2023EN)

set(CMAKE_CXX_STANDARD 17)

add_executable(task1 ex8/task1.cpp)
add_executable(task2 ex8/task2.cpp)
add_executable(task3 ex8/task3.cpp)
add_executable(task4 ex7/task4.cpp)
add_executable(task5 ex7/task5.cpp)
add_executable(task6 ex7/task6.cpp)
add_executable(task7 ex7/task7.cpp)
add_executable(task8 ex7/task8.cpp)
add_executable(task9 ex7/task9.cpp)
add_executable(task10 ex7/task10.cpp)
add_executable(task11 ex7/task11.cpp)
add_executable(task12 ex7/task12.cpp)



