cmake_minimum_required(VERSION 3.24)
project(SP2023EN)

set(CMAKE_CXX_STANDARD 17)

add_executable(task1 ex10/task1.cpp)
add_executable(task2 ex10/task2.cpp)
add_executable(task3 ex10/task3.cpp)
add_executable(task4 ex10/task4.cpp)
add_executable(task5 ex10/task5.cpp)
add_executable(task6 ex10/task6.cpp)
add_executable(task7 ex10/task7.cpp)
add_executable(task8 ex9/task8.cpp)
add_executable(task9 ex7/task9.cpp)
add_executable(task10 ex7/task10.cpp)
add_executable(task11 ex7/task11.cpp)
add_executable(task12 ex7/task12.cpp)



